edited some language issues

--- a/content/en/posts/2022-01-12 Git_Note.md
+++ b/content/en/posts/2022-01-12 Git_Note.md
@@ -150,7 +150,7 @@ git bisect #binary search history (e.g. for regressions)
 .gitignore #specify intentionally untracked files to ignore
 ```
 
-## Resources
+## References
 
 [Version Control (Git)](https://missing.csail.mit.edu/2020/version-control/)
 
