--- a/content/zh-tw/posts/2022-01-12 Git_Note.md
+++ b/content/zh-tw/posts/2022-01-12 Git_Note.md
@@ -148,7 +148,8 @@ git bisect #透過二分搜尋來搜尋歷史紀錄
 .gitignore #指定忽視且不會再追蹤的檔案
 ```
 
-## 參考資源
+## 參考資料
+
 [版本控制](https://missing-semester-zh-hant.github.io/2020/version-control/)
 
 [Git 與 Github 版本控制基本指令與操作入門教學](https://blog.techbridge.cc/2018/01/17/learning-programming-and-coding-with-python-git-and-github-tutorial/)
