added archives and categories

--- a/content/en/posts/2022-01-12 Git_Note.md
+++ b/content/en/posts/2022-01-12 Git_Note.md
@@ -4,6 +4,7 @@ date: 2022-01-12T15:30:00Z
 # weight: 1
 # aliases: ["/AirTag"]
 tags: ["Git", "Note", Command, "Basic"]
+categories: ["Note", "Git", "Command", "Basic"]
 author: "Andrew Wu"
 # author: ["Me", "You"] # multiple authors
 showToc: true
