--- a/content/zh-tw/posts/2022-01-12 Git_Note.md
+++ b/content/zh-tw/posts/2022-01-12 Git_Note.md
@@ -4,6 +4,7 @@ date: 2022-01-12T15:30:00Z
 # weight: 1
 # aliases: ["/AirTag"]
 tags: ["Git", "筆記", Command, "指令"]
+categories: ["Git", "筆記", "指令", "Command"]
 author: "Andrew Wu"
 # author: ["Me", "You"] # multiple authors
 showToc: true
